# hongbai-oracle-sample

./: .gitignore  Cargo.toml  LICENSE  README.md
.devcontainer/: devcontainer.json
schema/: hongbai-oracle.json
schema/raw/: execute.json  query.json  response_to_get_all_prices.json  response_to_get_price.json
scripts/: deploy.sh  optimize.sh
src/: contract.rs  msg.rs  state.rs
tests/: instantiate.rs
